--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         <h1>Hello world!</h1>
     </header>
     <main></main>
-    <footer></footer>
+    <footer><h4>footer</h4></footer>
 </body>
 </html>
