--- a/index.html
+++ b/index.html
@@ -9,9 +9,25 @@
 </head>
 <body>
     <header>
-        <h1>Hello world!</h1>
+        <div class="container">
+            <div class="logo"></div>
+            <ul>
+                <li>Главная</li>
+                <li>Обо мне</li>
+                <li>Контакты</li>
+                <li>Проекты</li>
+            </ul>
+        </div>
+        
     </header>
-    <main></main>
-    <footer><h4>footer</h4></footer>
+    <main>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat, veritatis fuga expedita sint reiciendis corporis magnam consequuntur fugit neque possimus vel laudantium nisi sit, odio, praesentium enim numquam beatae! Veritatis.
+    </main>
+    <footer><h4>footer</h4>
+    
+    <nav>
+        Тут будет меню
+    </nav>
+    </footer>
 </body>
 </html>
